--- a/public/test-gui.css
+++ b/public/test-gui.css
@@ -6,6 +6,7 @@
 .config-widget {
   height: 700px;
   margin-left: 5px;
+  overflow: auto;
 }
 .widget-controler {
   margin-left: 7px;
@@ -29,4 +30,8 @@
 }
 .versionDropDown {
   margin-bottom: 1px !important;
+}
+.accordian-content-container {
+  max-height: 500px;
+  overflow-y: scroll;
 }
