--- a/public/test-gui.css
+++ b/public/test-gui.css
@@ -4,10 +4,13 @@
   padding-right: 10px;
 }
 .config-widget {
+  padding-top: 10px;
   height: 700px;
   margin-left: 5px;
   overflow: auto;
+  
 }
+.config-widget::-webkit-scrollbar { width: 0 !important };
 .widget-controler {
   margin-left: 7px;
   margin-bottom: 10px;
@@ -33,5 +36,14 @@
 }
 .accordian-content-container {
   max-height: 500px;
-  overflow-y: scroll;
+  overflow-y: auto;
+}
+.fg-column-basic {
+  background-color: bisque;
+}
+.fg-column-header {
+  background-color: #ffab45;
+}
+.fg-column-cell {
+  background-color: #dadada;
 }
